fix [[Broken][Syntax]] problems: changed to [[Correct|Syntax]]

--- a/Frankenstein.wiki
+++ b/Frankenstein.wiki
@@ -1,5 +1,5 @@
 = Frankenstein - Summary =
-Finished within approximately 4 days. Finished date is Feb 4, 2011. 3rd English book reader on [[Kindle]].
+Finished within approximately 4 days. Finished date is Feb 4, 2011. 3rd English book read on [[Kindle]].
 
 The author is [[Mary Shelley]] (English woman).
 
