--- a/Kindle.wiki
+++ b/Kindle.wiki
@@ -11,7 +11,7 @@ I possess a Kindle 3, Black, Wi-fi only. It was ordered directly from amazon.com
 In total, the order costs me less than 1100 rmb.
 
 == Notes ==
-* Duokan System is okay, but I think Kindle 3 only satisfies readers reading [[Reading][Literature]] in mobi. If you want to read pdf's, go to Kindle DXG or other devices.
+* Duokan System is okay, but I think Kindle 3 only satisfies readers reading [[Reading|Literature]] in mobi. If you want to read pdf's, go to Kindle DXG or other devices.
 * I found Kindle extremely suitbale for learning math textbooks. Because you don't need too much space for viewing; you just read a small piece, think, and learn.
 
 -----
