--- a/wordcount.wiki
+++ b/wordcount.wiki
@@ -66,4 +66,4 @@ Huge difference from all other three articles!
 ------
 %title wordcount.py and Some Interesting Results - Covi
 Created Date: November 26, 2011 10:34:46<br />
-Last Modified: November 26, 2011 11:02:07 
+[[Last]] Modified: November 26, 2011 11:02:07 
