--- a/Movies.wiki
+++ b/Movies.wiki
@@ -92,7 +92,8 @@
 * _In Bruges_, 2008.
 * _Shameless_ (TV series), Season 1-2.
 * _Hatfields and McCoys_, (mini TV series), Part 1-3.
+* _3:10 to Yuma_, 2007
 ------
 %title Movies I've Watched
 Creation Date: Feb 09, 2011 0:13:47<br />
-Last Modified: Sun 22 Jul 2012 11:48:33 AM CST
+Last Modified: Thu 26 Jul 2012 10:19:42 AM CST
