--- a/NLP Notes.wiki
+++ b/NLP Notes.wiki
@@ -3,9 +3,9 @@
 Since Apr 2012 I have been taking Coursera.org's online NLP course, offered by Stanford professors.
 
 == Notes ==
-* Maximum Entropy (Maxent) models. ([http://me.geotakucovi.com/maxent.html html] | [http://me.geotakucovi.com/maxent.pdf pdf])
+* Maximum Entropy (Maxent) models. ([[http://me.geotakucovi.com/maxent.html|html]] | [[http://me.geotakucovi.com/maxent.pdf|pdf]])
 
 -----
 %title NLP Notes - Covi
 Creation Date: June 10, 2012 00:03:41<br>
-Last Modified: June 10, 2012 00:03:41 
+Last Modified: Fri 27 Jul 2012 11:18:17 AM CST
