--- a/Movies.wiki
+++ b/Movies.wiki
@@ -92,8 +92,12 @@
 * _In Bruges_, 2008.
 * _Shameless_ (TV series), Season 1-2.
 * _Hatfields and McCoys_, (mini TV series), Part 1-3.
-* _3:10 to Yuma_, 2007
+* _3:10 to Yuma_, 2007.
+* _The Amazing Spider-Man_, 2012.
+* (Rewatch) _Batman Begins_, 2005.
+* _The Dark Knight Rises_, 2012.
+* (Rewatch) _The Dark Knight_, 2008.
 ------
 %title Movies I've Watched
 Creation Date: Feb 09, 2011 0:13:47<br />
-Last Modified: Thu 26 Jul 2012 10:19:42 AM CST
+Last Modified: Wed 01 Aug 2012 10:50:05 AM CST
